gcc/testsuite/gcc.dg/pch/valid-4.c
/* { dg-options "-I. -Winvalid-pch -Wtrigraphs" } */

#include "valid-4.h"

char * x = "??/";  /* { dg-error "trigraph" } */

